tests/NormalTests/paczka1/fuzzy1/90300103.err
Error in line 2: AeQlFn8u8x S338 93,38
Error in line 1: AeQlFn8u8x A549 12,0
Error in line 21: iEPKO A126 30,5
Error in line 28: iEPKO A549 61,0
Error in line 31: xca4caBtsiH S974 81,0
Error in line 10: AeQlFn8u8x S338 11,3
